--- a/style.css
+++ b/style.css
@@ -2,17 +2,15 @@
 {
 	position: relative;
 	text-align: center;	
-    /* center the div */
     right: 0;
     left: 0;
     margin-right: auto;
     margin-left: auto;
-    /* give it dimensions */
     min-height: 10em;
     width: 40%;	
-    /* just for example presentation */
     top: 10em;
-	border-style: solid;    
+	padding: 70px 0;
+	/*border-style: solid;    */
 }
 
 #colorBox
