--- a/style.css
+++ b/style.css
@@ -36,6 +36,17 @@
 	/*border: solid black;*/
 }
 
+#compareBox
+{
+	position:relative;	
+	display:block; 
+	margin-bottom:1px;	
+	height: 100%;
+	width: 70%;
+	z-index: 1;
+	margin-right: auto;
+	margin-left: auto;
+}
 
 #outerBox
 {
@@ -47,7 +58,22 @@
     top: 5em;	
 	z-index:-1;
 }
+/*
+#redSlider
+{
+	background:red;
+}
 
+#blueSlider
+{
+	background:blue;
+}
+
+#greenSlider
+{
+	background:green;
+}
+*/
 .slider {	
 	position: relative;
 	display: block;
@@ -58,7 +84,7 @@
     appearance: none;
     width: 15%; /* Full-width */
     height: 25px; /* Specified height */
-    /*background: #d3d3d3; /* Grey background */
+    /*background: #d3d3d3; /* Grey background */	
     outline: solid #C4C4C4 1px; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
     -webkit-transition: .2s; /* 0.2 seconds transition on hover */
@@ -72,20 +98,37 @@
 }
 
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
-.slider::-webkit-slider-thumb {
+#redSlider::-webkit-slider-thumb {
     -webkit-appearance: none; /* Override default look */
     appearance: none;
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */    
-	background: black; 
-    cursor: pointer; /* Cursor on hover */
+	background: red; 
+    /*cursor: pointer; /* Cursor on hover */
+}
+
+#greenSlider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */    
+	background: green; 
+    /*cursor: pointer; /* Cursor on hover */
+}
+#blueSlider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */    
+	background: blue; 
+    /*cursor: pointer; /* Cursor on hover */
 }
 
 .slider::-moz-range-thumb {
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */
-    /*background: #4CAF50; /* Green background */
-    cursor: pointer; /* Cursor on hover */
+    /*background: #4CAF50;  Green background */
+    /*cursor: pointer; Cursor on hover */
 }
 
 button
