--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
+*
+{
+/*font: "Trebuchet MS";*/
+font-family: sans-serif;
+}
+/*
+#flexContainer
+{
+  
+  display: flex;
+  flex-wrap: nowrap;
+  
+  }
+
+#flexContainer > div
+{text-align: center;}*/
+
 .box
 {
+
 	position: relative;
 	text-align: center;	
     right: 0;
@@ -7,34 +25,82 @@
     margin-right: auto;
     margin-left: auto;
     min-height: 10em;
-    width: 40%;	
+    width: 60%;	
     top: 10em;
 	padding: 70px 0;
-	/*border-style: solid;    */
+	/*border-style: solid black;*/
+}
+
+button
+{
+		
+		position: relative;
+		top: 9em;
+		width: 120px;
+		right: 0;		
+		margin-right: auto;
+		margin-left: auto;		
+		height: 30px;
+		background-color: white;
+		border-style:none;
+		border: 1px #C4C4C4 ;		
+		-webkit-transition-duration: 0.5s;
+		webkit-appearance: none;
+		border-radius: 4px;
+		margin: 14px 54px 0px 4px;
+		padding: 5px 5px 5px 5px;
+		font-size: 15px;
+}
+
+button:hover
+{
+	border: 1px solid #C4C4C0;
+	background-color: #e1e1e1;
+}
+
+
+
+.buttonsBox
+{
+	position: relative;
+	bottom: 1em;
+	z-index:2;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+
+.outerDiv
+{
+	min-height: 75vh;	
+	text-align: center;	
+	grid-template-rows: 20% 20% 20% 20% 20%;
+	 grid-template-columns: 25% 25% 25% 25%;	
+	 z-index: -2;
+}
+
+.logo
+{
+		top: 0px;
+		left: 0px;
+		
 }
 
 #colorBox
-{
+{	
+	color: white;
 	position: float center;	
-	display:block; 
+	text-align: center;
+	display: inline-block;
+	text-shadow: -1px  0 black,  0 1px black,  2px 2 grey, 1 -1px black;
+	font-size: 20px;
+	display:block; 	
 	margin-bottom:1px;
-	top: 5em;
+	top: 3em;
 	height: 40%;
-	width: 30%
+	width: 50%
 }
 
-.slidersBox
-{    
-	position: relative;
-	  display: block;
-	margin-left: auto;
-	margin-right: auto;
-	float:left; 
-	top: 7em;
-	display:block; 
-	width: 99%;		
-	/*border: solid black;*/
-}
 
 #compareBox
 {
@@ -48,53 +114,48 @@
 	margin-left: auto;
 }
 
-#outerBox
-{
-	position: absolute;
-	/*background-color: black;
-	opacity: 0.5;*/	
-    width: 70%;
-	height: 80%;    
-    top: 5em;	
-	z-index:-1;
-}
-/*
-#redSlider
-{
-	background:red;
+.slidersBox
+{    	
+	
+	position: relative;	
+	text-align: center;		
+	float:left; 
+	top: 7em;
+	display:block; 
+	width: 99%;				
+	
 }
 
-#blueSlider
-{
-	background:blue;
+#slidersContainer
+{	
+	display: block;
+	width: 100%; /* Full-width */
+    height: 25px; /* Specified height */
+	text-align: center;	
+	margin: 10px;	
 }
 
-#greenSlider
-{
-	background:green;
-}
-*/
 .slider {	
 	position: relative;
-	display: block;
+	text-align:center;
 	margin-left: auto;
 	margin-right: auto;
-	float:left ; 	
-    -webkit-appearance: none;  /* Override default CSS styles */
+	float:left; 	
+	display: block;	
+	-webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
-    width: 15%; /* Full-width */
-    height: 25px; /* Specified height */
-    /*background: #d3d3d3; /* Grey background */	
+    width: 30vh; /* Full-width */
+    height: 35px; /* Specified height */
     outline: solid #C4C4C4 1px; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-    transition: opacity .2s;
-	/*margin: 0em 0em 0em 15em;*/
+    -webkit-transition: .5s; /* 0.2 seconds transition on hover */
+    transition: opacity .5s;
+	margin: 0em 10em 0em 10em;
 }
 
 /* Mouse-over effects */
 .slider:hover {
-    opacity: 1; /* Fully shown on mouse-over */
+    opacity: 1; /* Fully shown on mouse-over */	
 }
 
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
@@ -102,9 +163,9 @@
     -webkit-appearance: none; /* Override default look */
     appearance: none;
     width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */    
-	background: red; 
-    /*cursor: pointer; /* Cursor on hover */
+    height: 25px; /* Slider handle height */    	
+	background: red;     
+	opacity: .75;
 }
 
 #greenSlider::-webkit-slider-thumb {
@@ -112,30 +173,21 @@
     appearance: none;
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */    
-	background: green; 
-    /*cursor: pointer; /* Cursor on hover */
+	opacity: .75;
+	background: green;     
 }
 #blueSlider::-webkit-slider-thumb {
     -webkit-appearance: none; /* Override default look */
     appearance: none;
     width: 25px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */    
-	background: blue; 
-    /*cursor: pointer; /* Cursor on hover */
+	opacity: .75;
+	background: blue;     
 }
 
 .slider::-moz-range-thumb {
     width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */
-    /*background: #4CAF50;  Green background */
-    /*cursor: pointer; Cursor on hover */
+    height: 25px; /* Slider handle height */        
 }
 
-button
-{
-		position: relative;
-		top: 9em;
-		right: 0;		
-		margin-right: auto;
-		margin-left: auto;		
-}
+
