--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ font-family: sans-serif;
     width: 60%;	
     top: 10em;
 	padding: 70px 0;
+	overflow: clip;
 	/*border-style: solid black;*/
 }
 
@@ -50,6 +51,7 @@ button
 		margin: 14px 54px 0px 4px;
 		padding: 5px 5px 5px 5px;
 		font-size: 15px;
+		z-index:10;
 }
 
 button:hover
@@ -77,13 +79,21 @@ button:hover
 	grid-template-rows: 20% 20% 20% 20% 20%;
 	 grid-template-columns: 25% 25% 25% 25%;	
 	 z-index: -2;
+	 overflow: clip;
+	 -webkit-flex-shrink: 3; 
 }
 
 .logo
 {
 		top: 0px;
 		left: 0px;
+		width:6%; /* you can use % */
+		height: auto;
 		
+}
+
+img.resize {
+    
 }
 
 #colorBox
@@ -92,13 +102,20 @@ button:hover
 	position: float center;	
 	text-align: center;
 	display: inline-block;
-	text-shadow: -1px  0 black,  0 1px black,  2px 2 grey, 1 -1px black;
-	font-size: 20px;
+	vertical-align: middle;
+	line-height: 200px;
+	font-weight: 900;
+	text-shadow: 0px 5px 5px gray;
+	/*text-shadow: 2px  0 black,  1 1px black,  2px 2 grey, 2 5px black;*/
+	  
+	font-size: 2em;
 	display:block; 	
 	margin-bottom:1px;
-	top: 3em;
-	height: 40%;
-	width: 50%
+	top: 2em;
+	width: 50%;
+	max-height: 20%;
+	white-space: nowrap;
+	overflow: clip;
 }
 
 
@@ -107,7 +124,7 @@ button:hover
 	position:relative;	
 	display:block; 
 	margin-bottom:1px;	
-	height: 100%;
+	height: 35%;
 	width: 70%;
 	z-index: 1;
 	margin-right: auto;
@@ -116,7 +133,7 @@ button:hover
 
 .slidersBox
 {    	
-	
+	border-radius: 4px;
 	position: relative;	
 	text-align: center;		
 	float:left; 
@@ -129,13 +146,15 @@ button:hover
 #slidersContainer
 {	
 	display: block;
-	width: 100%; /* Full-width */
+	width: 100%; /* Full-width */	
     height: 25px; /* Specified height */
 	text-align: center;	
 	margin: 10px;	
+	overflow: visible;
 }
 
-.slider {	
+.slider {
+
 	position: relative;
 	text-align:center;
 	margin-left: auto;
@@ -144,13 +163,14 @@ button:hover
 	display: block;	
 	-webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
-    width: 30vh; /* Full-width */
-    height: 35px; /* Specified height */
+    width: 32vh; /* Full-width */
+    height: 120%; /* Specified height */
     outline: solid #C4C4C4 1px; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
     -webkit-transition: .5s; /* 0.2 seconds transition on hover */
     transition: opacity .5s;
-	margin: 0em 10em 0em 10em;
+	margin: 0em 10em 2em 10em;
+	z-index:10;
 }
 
 /* Mouse-over effects */
@@ -160,33 +180,41 @@ button:hover
 
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
 #redSlider::-webkit-slider-thumb {
+	
+	
+	border-radius: 4px;	
     -webkit-appearance: none; /* Override default look */
     appearance: none;
-    width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */    	
+    width: 5vh; /* Set a specific slider handle width */
+    height: 4.5vh; /* Slider handle height */    	
 	background: red;     
 	opacity: .75;
+
 }
 
 #greenSlider::-webkit-slider-thumb {
+	border-radius: 4px;	
     -webkit-appearance: none; /* Override default look */
     appearance: none;
-    width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */    
+    width: 5vh; /* Set a specific slider handle width */
+    height: 4.5vh; /* Slider handle height */    	
 	opacity: .75;
 	background: green;     
 }
 #blueSlider::-webkit-slider-thumb {
+	border-radius: 4px;	
+	background-image: linear-gradient(90deg, transparent 50%, rgba(255,255,255,.5) 50%);
     -webkit-appearance: none; /* Override default look */
-    appearance: none;
-    width: 25px; /* Set a specific slider handle width */
-    height: 25px; /* Slider handle height */    
+    appearance: none;	
+    width: 5vh; /* Set a specific slider handle width */
+    height: 4.5vh; /* Slider handle height */    	
 	opacity: .75;
 	background: blue;     
 }
 
 .slider::-moz-range-thumb {
-    width: 25px; /* Set a specific slider handle width */
+	
+    width: 45px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */        
 }
 
