--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ img.resize {
 	margin-bottom:1px;
 	top: 2em;
 	width: 50%;
-	max-height: 20%;
+	max-height: 30%;
 	white-space: nowrap;
 	overflow: clip;
 }
@@ -121,14 +121,16 @@ img.resize {
 
 #compareBox
 {
-	position:relative;	
+	position:absolute;	
 	display:block; 
-	margin-bottom:1px;	
-	height: 35%;
+	margin-bottom:.5%;	
+	left: 13%;
+	height: 70%;
 	width: 70%;
 	z-index: 1;
 	margin-right: auto;
 	margin-left: auto;
+	overflow: hide;
 }
 
 .slidersBox
@@ -163,7 +165,7 @@ img.resize {
 	display: block;	
 	-webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
-    width: 32vh; /* Full-width */
+    width: 15%; /* Full-width */
     height: 120%; /* Specified height */
     outline: solid #C4C4C4 1px; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
