--- a/style.css
+++ b/style.css
@@ -1,23 +1,17 @@
+
 *
 {
-/*font: "Trebuchet MS";*/
 font-family: sans-serif;
 }
-/*
-#flexContainer
-{
-  
-  display: flex;
-  flex-wrap: nowrap;
-  
-  }
 
-#flexContainer > div
-{text-align: center;}*/
+html, body {
+    margin: 0;
+    height: 100%;
+	min-height: 100vh;
+}
 
 .box
 {
-
 	position: relative;
 	text-align: center;	
     right: 0;
@@ -29,19 +23,17 @@ font-family: sans-serif;
     top: 10em;
 	padding: 70px 0;
 	overflow: clip;
-	/*border-style: solid black;*/
 }
 
 button
-{
-		
+{		
 		position: relative;
 		top: 9em;
-		width: 120px;
+		width: 7rem;
 		right: 0;		
 		margin-right: auto;
 		margin-left: auto;		
-		height: 30px;
+		height: 3.5rem;
 		background-color: white;
 		border-style:none;
 		border: 1px #C4C4C4 ;		
@@ -79,7 +71,7 @@ button:hover
 	grid-template-rows: 20% 20% 20% 20% 20%;
 	 grid-template-columns: 25% 25% 25% 25%;	
 	 z-index: -2;
-	 overflow: clip;
+	 /*overflow: clip;*/
 	 -webkit-flex-shrink: 3; 
 }
 
@@ -92,10 +84,6 @@ button:hover
 		
 }
 
-img.resize {
-    
-}
-
 #colorBox
 {	
 	color: white;
@@ -106,12 +94,10 @@ img.resize {
 	line-height: 200px;
 	font-weight: 900;
 	text-shadow: 0px 5px 5px gray;
-	/*text-shadow: 2px  0 black,  1 1px black,  2px 2 grey, 2 5px black;*/
-	  
 	font-size: 2em;
 	display:block; 	
 	margin-bottom:1px;
-	top: 2em;
+	 top: 2em;
 	width: 50%;
 	max-height: 30%;
 	white-space: nowrap;
@@ -122,14 +108,11 @@ img.resize {
 #compareBox
 {
 	position:absolute;	
-	display:block; 
-	margin-bottom:.5%;	
-	left: 13%;
-	height: 70%;
-	width: 70%;
-	z-index: 1;
-	margin-right: auto;
-	margin-left: auto;
+	top: 0px;
+	right: 0px;
+	height: 100%;
+	width: 50%;
+	z-index: 1;	
 	overflow: hide;
 }
 
@@ -142,17 +125,19 @@ img.resize {
 	top: 7em;
 	display:block; 
 	width: 99%;				
+	height: 10%;
 	
 }
 
 #slidersContainer
 {	
 	display: block;
+	position: absolute;
 	width: 100%; /* Full-width */	
-    height: 25px; /* Specified height */
+    height: 40%; /* Specified height */
 	text-align: center;	
 	margin: 10px;	
-	overflow: visible;
+	overflow: visible;	
 }
 
 .slider {
@@ -160,19 +145,23 @@ img.resize {
 	position: relative;
 	text-align:center;
 	margin-left: auto;
-	margin-right: auto;
-	float:left; 	
-	display: block;	
+	margin-right: auto;	
+	display: inline-block;	
+	*display: inline;
 	-webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
-    width: 15%; /* Full-width */
-    height: 120%; /* Specified height */
+    width: 35%; /* Full-width */
+    height: 70%; /* Specified height */
     outline: solid #C4C4C4 1px; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
     -webkit-transition: .5s; /* 0.2 seconds transition on hover */
     transition: opacity .5s;
 	margin: 0em 10em 2em 10em;
 	z-index:10;
+}
+
+.sliders{
+	display:inline-block;
 }
 
 /* Mouse-over effects */
@@ -182,8 +171,6 @@ img.resize {
 
 /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
 #redSlider::-webkit-slider-thumb {
-	
-	
 	border-radius: 4px;	
     -webkit-appearance: none; /* Override default look */
     appearance: none;
@@ -215,9 +202,56 @@ img.resize {
 }
 
 .slider::-moz-range-thumb {
-	
     width: 45px; /* Set a specific slider handle width */
     height: 25px; /* Slider handle height */        
 }
 
 
+#disclaimerText{
+	text-align: center;
+	font-size: 10px;
+	color: grey;
+	bottom: 2px;
+	position: absolute;
+	left: 0px;
+	width: 100%
+}
+
+@media only screen and (max-width: 500px) {
+	body{		
+		overflow: hidden;
+		height: 100%;
+	}
+	button{
+		width: 5rem;
+		background-color: #e6e6e6;
+		border: 2px solid #dbdbdb;
+	}
+		.slidersBox{
+			bottom: 25%;
+			position: absolute;
+			padding-bottom:20%;
+			width: 100%;
+			left: 2%;
+		}
+		.buttonsBox{
+			position: absolute;
+			bottom: 23%;
+			width: 100%;
+			left: 5%;
+		}
+		#slidersContainer{
+			left: -50px;
+			bottom: -195px;
+			position: absolute;
+		}
+		.box{
+			min-height: 4em;
+		}
+		#colorBox{
+			line-height: 125px;
+		}
+		#compareBox{
+			font-size: 13px;
+		}
+}	
