--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ button:hover
 {
 		top: 0px;
 		left: 0px;
-		width:6%; /* you can use % */
+		width:10%;
 		height: auto;
 		
 }
@@ -97,9 +97,10 @@ button:hover
 	font-size: 2em;
 	display:block; 	
 	margin-bottom:1px;
-	 top: 2em;
+	top: 2em;
 	width: 50%;
 	max-height: 30%;
+	max-width: 50%;
 	white-space: nowrap;
 	overflow: clip;
 }
@@ -147,6 +148,7 @@ button:hover
 	text-align: center;	
 	margin: 10px;	
 	overflow: visible;	
+	bottom: -20%;
 }
 
 .slider {
@@ -159,7 +161,7 @@ button:hover
 	*display: inline;
 	-webkit-appearance: none;  /* Override default CSS styles */
     appearance: none;
-    width: 35%; /* Full-width */
+    width: 40%; /* Full-width */
     height: 70%; /* Specified height */
     outline: solid #C4C4C4 1px; /* Remove outline */
     opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
